# mongo-collections

./: .gitignore  Cargo.toml  Dockerfile  README.md  test.yaml
conf/: application.yaml
src/: crdgen.rs  main.rs  resource.rs
