[package]
name = "mongo-collections"
version = "1.0.2"
edition = "2024"
default-run = "mongo-collections"
description = "The MongoDB collections operator"
homepage = "https://github.com/wdonne/mongo-collections"
repository = "https://github.com/wdonne/mongo-collections"
license = "BSD-2-Clause"
readme = "README.md"
keywords = ["kubernetes", "operator", "mongodb", "collections"]
exclude = ["*.iml"]

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
kube = { version = "3.0.1", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.27.1", features = ["v1_31"] }
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.149"
kube-operator-util = "1.0.0"
generic-builders = "1.0.0"
tokio = { version = "1.50.0", features = ["full"] }
log = "0.4.29"
thiserror = "2.0.18"
anyhow = "1.0.102"
futures = "0.3.32"
rustls = { version = "0.23.36", features = ["ring"] }
env_logger = "0.11.9"
mongodb = { version = "3.5.1", features = ["aws-auth"] }
config = "0.15.19"
serde_repr = "0.1.20"
